--- a/medium-playwright-JS/package.json
+++ b/medium-playwright-JS/package.json
@@ -9,6 +9,8 @@
   "author": "Diego Magdaleno",
   "license": "ISC",
   "dependencies": {
+    "cheerio": "^1.0.0-rc.12",
+    "cli-progress": "^3.12.0",
     "playwright": "^1.40.0"
   }
 }
